--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "prod": "NODE_ENV=prod ts-node -r tsconfig-paths/register ./src/index.ts",
+    "prod": "NODE_ENV=prod node ./out/index.js",
+    "build": "tsc -p tsconfig.json && babel build --out-dir out && rimraf build",
     "dev": "NODE_ENV=dev nodemon --exec ts-node -r tsconfig-paths/register ./src/index.ts",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "test": "jest"
@@ -20,8 +21,11 @@
   "homepage": "https://github.com/igorkamyshev/before-i-die#readme",
   "devDependencies": {
     "@types/jest": "^23.1.3",
+    "babel-cli": "^6.26.0",
+    "babel-plugin-module-resolver": "^3.1.1",
     "jest": "^23.2.0",
     "nodemon": "^1.17.5",
+    "rimraf": "^2.6.2",
     "ts-jest": "^22.4.6",
     "tslint": "^5.10.0"
   },
