--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
         "baseUrl": ".",
         "outDir": "build",
         "paths": {
-            "@bid/*": [ "./src/*" ]
+            "@app/*": [ "./src/*" ]
         }
     },
     "include": [
