--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "prod": "NODE_ENV=prod node ./out/index.js",
-    "build": "tsc -p tsconfig.json && babel build --out-dir out && rimraf build",
+    "build": "rimraf out && tsc -p tsconfig.json && babel build --out-dir out && rimraf build",
     "dev": "NODE_ENV=dev nodemon --exec ts-node -r tsconfig-paths/register ./src/index.ts",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "test": "jest"
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/igorkamyshev/before-i-die#readme",
   "devDependencies": {
+    "@types/express": "^4.16.0",
     "@types/jest": "^23.1.3",
     "babel-cli": "^6.26.0",
     "babel-plugin-module-resolver": "^3.1.1",
@@ -27,14 +28,13 @@
     "nodemon": "^1.17.5",
     "rimraf": "^2.6.2",
     "ts-jest": "^22.4.6",
+    "ts-node": "^7.0.0",
+    "tsconfig-paths": "^3.4.2",
     "tslint": "^5.10.0"
   },
   "dependencies": {
-    "@types/express": "^4.16.0",
     "express": "^4.16.3",
     "pm2": "^2.10.4",
-    "ts-node": "^7.0.0",
-    "tsconfig-paths": "^3.4.1",
     "typescript": "^2.9.2"
   }
 }
