--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "prod": "NODE_ENV=prod node ./out/index.js",
-    "build": "rimraf out && tsc -p tsconfig.json && babel build --out-dir out && rimraf build",
-    "dev": "NODE_ENV=dev nodemon --exec ts-node -r tsconfig-paths/register ./src/index.ts",
-    "lint": "tslint -c tslint.json 'src/**/*.ts'",
-    "test": "jest"
+    "dev": "node -r dotenv/config index.js",
+    "start": "node index.js",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -20,21 +18,13 @@
   },
   "homepage": "https://github.com/igorkamyshev/before-i-die#readme",
   "devDependencies": {
-    "@types/express": "^4.16.0",
-    "@types/jest": "^23.1.3",
-    "babel-cli": "^6.26.0",
-    "babel-plugin-module-resolver": "^3.1.1",
-    "jest": "^23.2.0",
-    "nodemon": "^1.17.5",
-    "rimraf": "^2.6.2",
-    "ts-jest": "^22.4.6",
-    "ts-node": "^7.0.0",
-    "tsconfig-paths": "^3.4.2",
-    "tslint": "^5.10.0"
+    "@solid-soda/eslint-config": "^2.1.4",
+    "dotenv": "^6.0.0",
+    "eslint": "^5.2.0",
+    "jest": "^23.2.0"
   },
   "dependencies": {
     "express": "^4.16.3",
-    "pm2": "^2.10.4",
-    "typescript": "^2.9.2"
+    "pm2": "^2.10.4"
   }
 }
