--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "devDependencies": {
     "@solid-soda/eslint-config": "^2.1.4",
     "dotenv": "^6.0.0",
-    "eslint": "^5.2.0",
-    "jest": "^23.2.0"
+    "eslint": "^5.2.0"
   },
   "dependencies": {
     "express": "^4.16.3",
