--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^5.2.0"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "node-telegram-bot-api": "^0.30.0",
     "pm2": "^2.10.4"
