--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "devDependencies": {
     "@solid-soda/eslint-config": "^2.1.4",
     "dotenv": "^6.0.0",
-    "eslint": "^5.2.0",
-    "jest": "^23.2.0"
+    "eslint": "^5.2.0"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
+    "node-telegram-bot-api": "^0.30.0",
     "pm2": "^2.10.4"
   }
 }
