--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,19 @@ node_js:
 - stable
 script:
 - yarn lint
+before_deploy:
+- openssl aes-256-cbc -K $encrypted_e7e781742b89_key -iv $encrypted_e7e781742b89_iv
+  -in deploy_rsa.enc -out deploy_rsa -d
+- docker pull "$DOCKER_USERNAME"/"$IMAGE_NAME" || true
+- docker build --pull --cache-from "$IMAGE_NAME" --tag "$IMAGE_NAME" .
+- docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
+- docker tag "$IMAGE_NAME" "$DOCKER_USERNAME/${IMAGE_NAME}:latest"
+- docker push "$DOCKER_USERNAME/${IMAGE_NAME}:latest"
+deploy:
+  skip_cleanup: true
+  provider: script
+  script:
+  - chmod 600 deploy_key && ssh -o StrictHostKeyChecking=no -i deploy_key $SERVER_USER@$SERVER_HOST
+    "cd web/notify && ./deploy.sh"
+  on:
+    branch: master
