--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ deploy:
   provider: script
   script:
   - chmod 600 deploy_key && ssh -o StrictHostKeyChecking=no -i deploy_key $SERVER_USER@$SERVER_HOST
-    "cd web/notify && ./deploy.sh"
+    "cd web/before-i-die && ./deploy.sh"
   on:
     branch: master
