--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ script:
 - yarn lint
 before_deploy:
 - openssl aes-256-cbc -K $encrypted_e7e781742b89_key -iv $encrypted_e7e781742b89_iv
-  -in deploy_rsa.enc -out deploy_rsa -d
+  -in deploy_key.enc -out deploy_key -d
 - docker pull "$DOCKER_USERNAME"/"$IMAGE_NAME" || true
 - docker build --pull --cache-from "$IMAGE_NAME" --tag "$IMAGE_NAME" .
 - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
